Add html and scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,20 @@
 // colors
-$bg-color: #fff;
+$bg-color: linear-gradient(to right bottom, #3c0341, #0d0238);
 $logo-color: #000;
+$circle-color: #0b1430;
+$circle-border-color: #fff;
+$small-circle-color: #131f3f;
+$title-color: #fff;
+$shape-bottom-1-color: #833866;
+$shape-bottom-2-color: #59355c;
+$shape-bottom-color: #833866;
+$marker-color: #e7484d;
+$marker-circle-color: #ba2d31;
+$ripple-color: lighten(#3e0254, 2%);
+
+// fonts
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600");
+$source-sans-font: 'Source Sans Pro', sans-serif;
 
 // mixins
 @mixin center {
@@ -17,17 +31,24 @@ $logo-color: #000;
     position: $position;
 }
 
-@mixin breakpoint($point) {
-    @if $point==tablet {
-        @media (max-width: 1024px) and (min-width: 768px) {
-            @content ;
-        }
-    }
-    @else if $point==mobile {
-        @media (max-width: 480px) and (min-width: 320px) {
-            @content ;
-        }
-    }
+// keyframes
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0vmin rgba($ripple-color, 0.3),
+                0 0 0 10vmin rgba($ripple-color, 0.3),
+                0 0 0 20vmin rgba($ripple-color, 0.3),
+                0 0 0 30vmin rgba($ripple-color, 0.3),
+                0 0 0 40vmin rgba($ripple-color, 0.3),
+                0 0 0 50vmin rgba($ripple-color, 0.3);
+  }
+  100% {
+    box-shadow: 0 0 0 10vmin rgba($ripple-color, 0.3),
+                0 0 0 20vmin rgba($ripple-color, 0.3),
+                0 0 0 30vmin rgba($ripple-color, 0.3),
+                0 0 0 40vmin rgba($ripple-color, 0.3),
+                0 0 0 50vmin rgba($ripple-color, 0.3),
+                0 0 0 60vmin rgba($ripple-color, 0);
+  }
 }
 
 html, body{
@@ -42,4 +63,163 @@ body{
 
 .logo{
   @include center;
+  width: 48vmin;
+  height: 48vmin;
+  background: $circle-color;
+  border: 2vmin solid $circle-border-color;
+  border-radius: 50%;
+  overflow: hidden;
+  animation: ripple 0.9s linear infinite;
+
+  .circle-container{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column-gap: 4vmin;
+    grid-row-gap: 5vmin;
+    margin-top: -1vmin;
+
+    .circle{
+      width: 1vmin;
+      height: 1vmin;
+      border-radius: 50%;
+      background: $small-circle-color;
+    }
+  }
+
+  .title-container{
+    margin-top: -45.6vmin;
+    .title{
+      text-align: center;
+      color: $title-color;
+      font-family: $source-sans-font;
+      font-size: 7vmin;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.8vmin;
+    }
+
+    .title-small{
+      margin-top: -8vmin;
+      text-align: center;
+      color: $title-color;
+      font-family: $source-sans-font;
+      font-size: 2vmin;
+      font-weight: 300;
+      text-transform: uppercase;
+      letter-spacing: 0.2vmin;
+    }
+  }
+
+  .shape-bottom{
+    position: absolute;
+    margin-top: 13.6vmin;
+    width: 48vmin;
+    height: 15vmin;
+    background: $shape-bottom-color;
+
+    .shape-1{
+      margin-top: -1vmin;
+      margin-left: -3vmin;
+      width: 10vmin;
+      height: 10vmin;
+      background: $shape-bottom-1-color;
+      transform: rotate(40deg);
+
+      &:before{
+        @include pseudo;
+        width: 15vmin;
+        height: 15vmin;
+        left: 3.2vmin;
+        top: -10.4vmin;
+        background: $shape-bottom-1-color;
+        transform: rotate(8deg);
+      }
+
+      &:after{
+        @include pseudo;
+        width: 15vmin;
+        height: 15vmin;
+        left: 4.3vmin;
+        top: -11.3vmin;
+        background: $shape-bottom-1-color;
+      }
+    }
+
+    .shape-2{
+      margin-top: -13.5vmin;
+      margin-left: 24.7vmin;
+      width: 10vmin;
+      height: 14vmin;
+      background: $shape-bottom-1-color;
+      transform: rotate(63deg);
+
+      &:before{
+        @include pseudo;
+        width: 15vmin;
+        height: 15vmin;
+        left: 2.7vmin;
+        top: -4.8vmin;
+        background: $shape-bottom-1-color;
+        transform: rotate(-30deg);
+      }
+
+      &:after{
+        @include pseudo;
+        width: 15vmin;
+        height: 15vmin;
+        left: 5.8vmin;
+        top: -20.3vmin;
+        background: $shape-bottom-1-color;
+        transform: rotate(-20deg);
+      }
+    }
+  }
+
+  .marker{
+    position: absolute;
+    margin-top: -0.1vmin;
+    left: 18.6vmin;
+    width: 12.5vmin;
+    height: 12.5vmin;
+    border-radius: 50% 50% 50% 0;
+    background: $marker-color;
+    transform: rotate(-45deg);
+
+    &:before{
+      @include pseudo;
+      top: 7vmin;
+      left: -4.6vmin;
+      width: 0;
+      height: 0;
+      border-left: 5.5vmin solid transparent;
+      border-right: 5.7vmin solid transparent;
+      border-top: 9vmin solid $marker-color;
+      transform: rotate(45deg);
+    }
+
+    &:after{
+      @include pseudo;
+    }
+
+    .marker-circle{
+      position: absolute;
+      z-index: 3;
+      left: 2.2vmin;
+      top: 2vmin;
+      width: 8.1vmin;
+      height: 8.1vmin;
+      background: $marker-circle-color;
+      border-radius: 50%;
+
+      &:after{
+        @include pseudo;
+        left: 1.9vmin;
+        top: 2vmin;
+        width: 4.3vmin;
+        height: 4.3vmin;
+        background: white;
+        border-radius: 50%;
+      }
+    }
+  }
 }
